examples/compiler_errors/row_effects/unresolved_row_subtract_multi_e420.flx
fn unresolved_many(x: Int) -> Int with |e - IO, |t - Time {
    x
}

fn main() -> Unit {
    let _ = unresolved_many(1)
}
